--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NESTwork</title>
     <script src="./script.js" ></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>NESTwork</h1>
 
+    
 </body>
 </html>
