--- a/index.html
+++ b/index.html
@@ -1,15 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NESTwork</title>
-    <script src="./script.js" ></script>
-    <link rel="stylesheet" href="style.css">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Intern Pool</title>
+   <link rel="stylesheet" href="src/style.css">
+   <!-- for Icons -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <h1>NESTwork</h1>
+<div class="overview">
+   <div class="div">
+    <div class="overlap">
+        <img class="logo-background" src="src/images/background-logo.png" />
+        <div class="blur-fade"></div> <!-- blur effect on top-->
+        <div class="blur-fade-2"></div> <!-- blur effect on bottom-->
+        <div class="logo">
+          <p class="NESTwork"><span class="text-wrapper">NEST</span><span class="span">work</span></p>
+          <img class="vector" src="src/images/logo.png" alt="NEST logo" />
+        </div>
 
-    
+        <!-- Navigation Bar with Buttons -->
+        <div class="navigation-bar">
+          <button class="nav-button active" onclick="window.location.href='index.html'">Overview</button>
+          <button class="nav-button inactive" onclick="window.location.href='results.html'">Results</button>
+        </div>
+
+       <div class="left-side"> <!-- 'left side' is the left big box ;intern pool box-->
+           <h1>Intern Pool</h1>  
+           <div class="filters">
+               <div class="filter-group">
+                   <label>Location:</label>
+                   <div class="filter-buttons" id="location-filters">
+                       <button data-location="Gilroy">Gilroy</button>
+                       <button data-location="Modesto">Modesto</button>
+                       <button data-location="Salinas">Salinas</button>
+                       <button data-location="Stockton">Stockton</button>
+                       <button data-location="Watsonville">Watsonville</button>
+                   </div>
+               </div>
+               <div class="filter-group">
+                   <label>Department:</label>
+                   <div class="filter-buttons" id="department-filters">
+                       <button data-department="Video">Video Production</button>
+                       <button data-department="Design">Design</button>
+                       <button data-department="Web Development">Web Development</button>
+                       <button data-department="Marketing">Marketing</button>
+                       <button data-department="Staff">Staff</button>
+                   </div>
+               </div>
+           </div>
+
+           <table>
+               <thead>
+                   <tr>
+                       <th>NAME</th>
+                       <th>DEPARTMENT</th>
+                       <th>LOCATION</th>
+                       <th>SELECT</th>
+                   </tr>
+               </thead>
+               <tbody id="intern-tbody">
+                   <!-- Intern rows will be dynamically added here -->
+               </tbody>
+           </table>
+
+           <div class="search-and-buttons">
+               <div class="search-bar">
+                   <input type="text" id="search" placeholder="Search">
+                   <button id="search-button"><i class="fas fa-search"></i></button>
+               </div>
+               <div class="buttons">
+                   <button id="select-all">Select All</button>
+                   <button id="deselect-all">Deselect All</button>
+               </div>
+           </div>
+       </div>
+
+       <div class="right-side">
+           <div class="pairing-box">
+               <div class="pairing-header">
+                   <h2>Pairings</h2>
+               </div>
+               <div>
+                   <div class="pairing-controls">
+                       <button id="clear-all">Clear All</button>
+                       <span id="total-pairings">0 Total</span>
+                   </div>
+               </div>
+               <div class="pairing-list">
+                   <ul id="pairings-list">
+                       <!-- Paired interns will be dynamically added here -->
+                   </ul>
+               </div>
+               <div class="pairing-actions">
+                   <button id="generate-pairing" class="green-button">
+                       <i class="fas fa-users"></i> 
+                   </button>
+                   <button id="generate-pairing" class="generate-button">Generate Pairing</button>
+               </div>
+           </div>
+
+           <div class="footer">
+               <div class="footer-text">Powered by</div> 
+               <img class="footer-logo" src="src/images/bottom-logo.png" />
+           </div>
+       </div>
+   </div>
+   
+    <!-- Only load script.js, since it imports json_convert.js -->
+    <script type="module" src="script.js"></script>
+
+</div>
 </body>
 </html>
