feat(script.js, results.js) added functionality to generate pairing button

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="./script.js"></script> <!-- Ensure this points to the correct file -->
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Intern Pool</title>
@@ -95,7 +94,7 @@
                    </ul>
                </div>
                <div class="pairing-actions">
-                   <button id="generate-pairing" class="green-button">
+                   <button id="green-button" class="green-button">
                        <i class="fas fa-users"></i> 
                    </button>
                    <button id="generate-pairing" class="generate-button">Generate Pairing</button>
@@ -110,8 +109,7 @@
    </div>
    
     <!-- Only load script.js, since it imports json_convert.js -->
-    <script type="module" src="script.js"></script>
-
 </div>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
