--- a/results.html
+++ b/results.html
@@ -60,7 +60,7 @@
            </div>
        </div>
    </div>
-   <script src="results.js"></script>
+   <script type="module" src="results.js"></script>
 </div>
 </body>
 </html>
