feat(script.js): added pairing logic to buttons

--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
                 </ul>
               </div>
               <div class="pairing-actions">
-                <button id="green-button" class="green-button">
-                  <i class="fas fa-users"></i>
+                <button id="green-button" class="green-button"> Pair
+                  <!-- <i class="fas fa-users"></i> -->
                 </button>
                 <div id="toggle-pairing-filter" class="toggle-pairing-filter" style="display: none;">
-            <button>Location</button>
-            <button>Department</button>
+            <button> by Location</button>
+            <button> by Department</button>
                  </div>
               <button id="generate-pairing" class="generate-button">
                 Generate Pairing
