--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
       </div>
 
-      <div id="myModal" class="modal">
+      <div id="tutorial-modal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
             <img class="tutorial-image" src = "/src/images/tutorial.png">
