feat(CSV): Added functionality to the Download CSV button

--- a/results.html
+++ b/results.html
@@ -7,6 +7,7 @@
    <link rel="stylesheet" href="src/style.css">
    <!-- for Icons -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+   <script type="module" src="results.js"></script>
 </head>
 <body>
 <div class="overview">
@@ -48,7 +49,7 @@
                   <button class="save-button">Save</button>
                   <button class="edit-button">Edit</button>
               </div>
-              <button class="download-pdf-button">Download PDF</button>
+              <button id="download-csv-button" class="download-pdf-button">Download CSV</button>
           </div>
       </div>
 
@@ -60,7 +61,7 @@
            </div>
        </div>
    </div>
-   <script type="module" src="results.js"></script>
+   
 </div>
 </body>
 </html>
