fix(index.html): changed text on pair btn

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </ul>
               </div>
               <div class="pairing-actions">
-                <button id="green-button" class="green-button"> Pair
+                <button id="green-button" class="green-button"> Pair by
                   <!-- <i class="fas fa-users"></i> -->
                 </button>
                 <div id="toggle-pairing-filter" class="toggle-pairing-filter" style="display: none;">
