--- a/results.html
+++ b/results.html
@@ -31,6 +31,7 @@
           <button class="nav-button active" onclick="window.location.href='results.html'">Results</button>
         </div>
         <div class="main-content">
+          <button id="back-button" class="mobile-back-button">Back</button>
           <div class="results">
               <div class="intern-headers">
                 <button class="invisible-green-button"></button>
