--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               Results
             </button>
           </div>
-
+          <div class="left-right-container">
           <div class="left-side">
             <!-- 'left side' is the left big box ;intern pool box-->
               <div class="intern-pool-container">
@@ -134,6 +134,7 @@
               </button>
             </div>
           </div>
+        </div>
 
           <div class="footer">
             <div class="footer-text">Powered by</div>
