--- a/results.html
+++ b/results.html
@@ -4,6 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Results</title>
+   <link rel="icon" type="image/png" href="src/images/favicon logo.png">
    <link rel="stylesheet" href="src/stylesheets/style.css" />
    <link rel="stylesheet" href="src/stylesheets/results-style.css" />
    <link rel="stylesheet" href="src/stylesheets/mobile-results-style.css" />
@@ -91,6 +92,7 @@
      </div>
   <!-- </div> -->
     </main>
+    <div class="blur-fade-2"></div> <!-- blur effect on bottom-->
     <footer>
       <div class="footer">
         <div class="footer-text">Powered by</div>
