--- a/index.html
+++ b/index.html
@@ -114,11 +114,14 @@
               </ul>
             </div>
             <div class="pairing-actions">
-              <button id="green-button" class="green-button"> Pair by </button>
-              <div id="toggle-pairing-filter" class="toggle-pairing-filter" style="display: none;">
-          <button> Same Location</button>
-          <button> Same Department</button>
-               </div>
+              <button id="green-button" class="green-button dropdown-toggle">Pair by <span>&#x25B2;</span></button>
+                <div id="toggle-pairing-filter" class="toggle-pairing-filter" style="display: none;">
+                  <button id="same-department">Same Department</button>
+                  <button id="same-location">Same Location</button>
+                  <button id="different-department">Different Department</button>
+                  <button id="different-location">Different Location</button>
+                </div>
+
             <button id="generate-pairing" class="generate-button">
               Generate Pairing
             </button>
