feat(mobile responsiveness): Added media query for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>NESTwork</title>
     <link rel="icon" type="image/png" href="src/images/favicon logo.png">
     <link rel="stylesheet" href="src/stylesheets/style.css" />
+    <link rel="stylesheet" href="src/stylesheets/mobile-overview-styles.css" />
     <!-- for Icons -->
     <link
       rel="stylesheet"
@@ -16,7 +17,7 @@
     <img class="logo-background" src="src/images/background-logo.png" />
     <header>
       <div class="header-div">
-        <div class="blur-fade"></div> <!-- blur effect on top-->
+        <div class="header-blur"></div> <!-- blur effect on top-->
             <div class="logo">
               <img class="vector" src="src/images/logo.png" alt="NEST logo" />
               <p class="NESTwork">
@@ -133,7 +134,7 @@
     </main>
      
 
-      <div class="blur-fade-2"></div> <!-- blur effect on bottom-->
+      <div class="footer-blur"></div> <!-- blur effect on bottom-->
 
     
 
