--- a/results.html
+++ b/results.html
@@ -18,7 +18,7 @@
     <img class="logo-background" src="src/images/background-logo.png" />
     <header>
       <div class="header-div">
-         <div class="blur-fade"></div> <!-- blur effect on top--> 
+         <div class="header-blur"></div> <!-- blur effect on top--> 
             <div class="logo">
               <img class="vector" src="src/images/logo.png" alt="NEST logo" />
               <p class="NESTwork">
@@ -96,7 +96,7 @@
      </div>
   <!-- </div> -->
     </main>
-    <div class="blur-fade-2"></div> <!-- blur effect on bottom-->
+    <div class="footer-blur"></div> <!-- blur effect on bottom-->
     <footer>
       <div class="footer">
         <div class="footer-text">Powered by</div>
